<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Image App</string>
        <string name="home">Home</string>
        <string name="creations">Creations</string>
        <string name="settings">Settings</string>
        <string name="image_selection">Image Selection</string>
        <string name="processing">Processing</string>
        <string name="result">Result</string>
        <string name="choose_image">Choose Image</string>
        <string name="save_to_gallery">Save to Gallery</string>
        <string name="share_to_other_apps">Share to other apps</string>
        <string name="creating_artwork">Creating Artwork...</string>
        <string name="processing_message">Please wait about 15 - 20 seconds and do not close the app or lock your device.</string>
        <string name="nothing_here_yet">Nothing Here Yet</string>
        <string name="start_creating_message">Start creating to see your results here.</string>
        <string name="start_creating">Start Creating</string>
        <string name="choose_language">Choose Language</string>
        <string name="search_language">Search Language</string>
        <string name="report">Report</string>
        <string name="language">Language</string>
        <string name="rate">Rate Us</string>
        <string name="share_app">Share App</string>
        <string name="privacy">Privacy Policy</string>

</resources>